🚀 Optimized GlowManager for Performance & Maintainability
✔ Better performance: Reduces unnecessary iterations and checks.
✔ More reliable: Eliminates potential NullPointerException.
✔ Cleaner code: Easier to read and maintain.